--- a/index.html
+++ b/index.html
@@ -20,6 +20,29 @@
     <!-- Theme CSS -->  
     <link id="theme-style" rel="stylesheet" href="assets/css/pillar-1.css">
 
+	<style>
+        @media print
+        {
+            .col-lg-9
+            {
+                width:75%;
+                float:left;
+            }
+			.col-lg-3
+            {
+                width:25%;
+            }
+			.no-print, .no-print *
+			{
+				display: none !important;
+			}
+        }
+        .picture{
+			object-fit: cover;
+			object-position: top;
+			height: 220px;
+		}
+    </style>
 
 </head> 
 
@@ -30,24 +53,25 @@
 		    <header class="resume-header pt-4 pt-md-0">
 			    <div class="row">
 				    <div class="col-block col-md-auto resume-picture-holder text-center text-md-start">
-				        <img class="picture" src="assets/images/profile.jpg" alt="">
+				        <img class="picture" src="assets/images/ParthaDhar.jpg" alt="">
 				    </div><!--//col-->
 				    <div class="col">
 					    <div class="row p-4 justify-content-center justify-content-md-between">
 						    <div class="primary-info col-auto">
-							    <h1 class="name mt-0 mb-1 text-white text-uppercase text-uppercase">Steve Doe</h1>
-							    <div class="title mb-3">Full Stack Developer</div>
+							    <h1 class="name mt-0 mb-1 text-white text-uppercase text-uppercase">Partha Dhar</h1>
+							    <div class="title mb-3">Backend Developer</div>
 							    <ul class="list-unstyled">
-								    <li class="mb-2"><a class="text-link" href="#"><i class="far fa-envelope fa-fw me-2" data-fa-transform="grow-3"></i>Steve.Doe@website.com</a></li>
-								    <li><a class="text-link" href="#"><i class="fas fa-mobile-alt fa-fw me-2" data-fa-transform="grow-6"></i>0123 456 78900</a></li>
+								    <li class="mb-2"><a class="text-link" href="#"><i class="far fa-envelope fa-fw me-2" data-fa-transform="grow-3"></i>partha.dhar2008@gmail.com</a></li>
+								    <li><a class="text-link" href="tel:+919007138864"><i class="fas fa-mobile-alt fa-fw me-2" data-fa-transform="grow-6"></i>+919007138864</a></li>
+									<li><a class="text-link" href="whatsapp://send?phone=917980595186&?text=Hello%20Partha%0AGod%20Day%20data-action=%22share/whatsapp/share%22"><i class="fab fa-whatsapp fa-fw me-2" data-fa-transform="grow-6"></i>+917980595186</a></li>
 							    </ul>
 						    </div><!--//primary-info-->
 						    <div class="secondary-info col-auto mt-2">
 							    <ul class="resume-social list-unstyled">
-					                <li class="mb-3"><a class="text-link" href="#"><span class="fa-container text-center me-2"><i class="fab fa-linkedin-in fa-fw"></i></span>linkedin.com/in/stevedoe</a></li>
-					                <li class="mb-3"><a class="text-link" href="#"><span class="fa-container text-center me-2"><i class="fab fa-github-alt fa-fw"></i></span>github.com/username</a></li>
-					                <li class="mb-3"><a class="text-link" href="#"><span class="fa-container text-center me-2"><i class="fab fa-codepen fa-fw"></i></span>codepen.io/username/</a></li>
-					                <li><a class="text-link" href="#"><span class="fa-container text-center me-2"><i class="fas fa-globe"></i></span>yourwebsite.com</a></li>
+					                <li class="mb-3"><a class="text-link" target="_blank" href="https://www.linkedin.com/in/parthadhar/"><span class="fa-container text-center me-2"><i class="fab fa-linkedin-in fa-fw"></i></span>linkedin.com/in/parthadhar</a></li>
+					                <li class="mb-3"><a class="text-link" target="_blank" href="https://github.com/ParthaDhar"><span class="fa-container text-center me-2"><i class="fab fa-github-alt fa-fw"></i></span>github.com/ParthaDhar</a></li>
+					                <!-- <li class="mb-3"><a class="text-link" href="#"><span class="fa-container text-center me-2"><i class="fab fa-codepen fa-fw"></i></span>codepen.io/username/</a></li> -->
+					                <li><a class="text-link" target="_blank" href="https://parthadhar.com/"><span class="fa-container text-center me-2"><i class="fas fa-globe"></i></span>parthadhar.com</a></li>
 							    </ul>
 						    </div><!--//secondary-info-->
 					    </div><!--//row-->
@@ -59,7 +83,10 @@
 			    <section class="resume-section summary-section mb-5">
 				    <h2 class="resume-section-title text-uppercase font-weight-bold pb-3 mb-3">Career Summary</h2>
 				    <div class="resume-section-content">
-					    <p class="mb-0">Summarise your career here. <a class="text-reset text-link" href="https://themes.3rdwavemedia.com/resources/sketch-template/pillar-sketch-sketch-resume-template-for-developers/" target="_blank">You can make a PDF version of your resume using our free Sketch template here</a>. Aenean commodo ligula eget dolor aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu. Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. Donec pede justo, fringilla vel, aliquet nec, vulputate eget. Lorem ipsum dolor sit amet, consectetuer adipiscing elit.</p>
+					    <!-- <p class="mb-0">Summarise your career here. <a class="text-reset text-link" href="https://themes.3rdwavemedia.com/resources/sketch-template/pillar-sketch-sketch-resume-template-for-developers/" target="_blank">You can make a PDF version of your resume using our free Sketch template here</a>. Aenean commodo ligula eget dolor aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu. Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. Donec pede justo, fringilla vel, aliquet nec, vulputate eget. Lorem ipsum dolor sit amet, consectetuer adipiscing elit.</p> -->
+						<p class="mb-0"> Senior Software Developer specializing in back-end development. Experienced with all stages of the development cycle for dynamic web projects. Well-versed in PHP OOP, MySQL, JavaScript. Moslty worked in Laravel (ui: bootstrap/vue).</p>
+						<p class="mb-0">Wrote back-end code for 4 working business applications, 11 microservices in NodeJs+MongoDb & 5 with Web3+NodeJs.</p>
+						<p class="mb-0">Also done automation setup for 2 organisations with CI/CD-runner/Docker/k8s, Managed 15+ VPS (+ 2 AWS accounts & 1 dedicated server), <a class="text-reset text-link" href="https://repos.mydevfactory.com/" target="_blank">Self-Hosted Git Setup</a> with Sonarqube/trivy code-scanning rules, for all developers in the current Company.</p>
 				    </div>
 			    </section><!--//summary-section-->
 			    <div class="row">
@@ -334,7 +361,7 @@
     </article> 
 
     
-    <footer class="footer text-center pt-2 pb-5">
+    <footer class="no-print footer text-center pt-2 pb-5">
 	    <!--/* This template is free as long as you keep the footer attribution link. If you'd like to use the template without the attribution link, you can buy the commercial license via our website: themes.3rdwavemedia.com Thank you for your support. :) */-->
         <small class="copyright">Designed with <span class="sr-only">love</span><i class="fas fa-heart"></i> by <a href="http://themes.3rdwavemedia.com" target="_blank">Xiaoying Riley</a> for developers</small>
     </footer>
