--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 			margin-top: 5px;
 		}
 		.mtopercent{
-			margin-top: 100%;
+			margin-top: 178%;
 		}
 		.resume-project-name {
 			color: #58677c;
@@ -203,7 +203,7 @@
 														design and management, Installed and managed BTC/TRON/Matic/ETH(Geth) fullnodes, making APIs to connect fullnodes with NodeJS, Develop Deposit/Withdraw functions to blockchain wallets, making Echoserver for Trade Orders auto allocation, Implementation of TradingView charts/G2FA/JWT, User Role/Wallet/Order/Affiliate management, Securing endpoints.
 													</p>
 												</li>
-												<li><!-- ICR-MO/BO -->
+												<li style="margin-top: 5%;"><!-- ICR-MO/BO -->
 													<div class="resume-project-name ms-auto">Presale Backoffice</div>
 													<p class="resume-project-desc ms-auto mtopp">
 														Web application for management of a Token, with different user roles, the concept of staking coins, deposit and withdraw, merchants' wallet coin stock and inventory management, distributing and payment system with the Token.
