--- a/index.html
+++ b/index.html
@@ -131,9 +131,9 @@
 				<section class="resume-section summary-section mb-5">
 					<h2 class="resume-section-title text-uppercase font-weight-bold pb-3 mb-3">Career Summary</h2>
 					<div class="resume-section-content" style="font-size: 15px;text-align: justify;">
-						<p class="mb-0"> Senior Software Developer specializing in back-end development. Experienced with all stages of the development cycle for dynamic web projects. Well-versed in PHP OOP, MySQL, JavaScript. Moslty worked in Laravel (ui: bootstrap/vue).</p>
-						<p class="mb-0">Wrote back-end code for 4 working business applications, 11 microservices in NodeJs+MongoDb & 5 with Web3+NodeJs.</p>
-						<p class="mb-0">Also done automation setup for 2 organisations with CI/CD-runner/Docker/k8s, Managed 15+ VPS (+ 2 AWS accounts & 1 dedicated server) with CloudFlare/GoDaddy, Installed and managed BTC/TRON/Matic/ETH(Geth) fullnodes, <a class="text-reset text-link" href="https://repos.mydevfactory.com/" target="_blank">Self-Hosted Git Setup</a> with Sonarqube/trivy code-scanning rules, for all developers in the current Company.</p>
+						<p class="mb-0"> Senior Software Developer specializing in back-end development. Experienced with all stages of the development cycle for dynamic web projects. Well-versed in PHP OOP, MySQL, and JavaScript. Mostly worked in Laravel (UI: bootstrap/vue).</p>
+						<p class="mb-0">Wrote backend code for 4 working business applications, 11 microservices in NodeJs+MongoDb & 5 with Web3+NodeJs.</p>
+						<p class="mb-0">Also done automation setup for 2 organizations with CI/CD-runner/Docker/k8s, Managed 15+ VPS (+ 2 AWS accounts & 1 dedicated server) with CloudFlare/GoDaddy, Installed and managed BTC/TRON/Matic/ETH(Geth) full nodes, <a class="text-reset text-link" href="https://repos.mydevfactory.com/" target="_blank">Self-Hosted Git Setup</a> with Sonarqube/trivy code-scanning rules, for all developers in the current Company.</p>
 					</div>
 				</section><!--//summary-section-->
 				<div class="row">
@@ -157,10 +157,10 @@
 												<li><!-- MeoxClub -->
 													<div class="resume-project-name ms-auto">Cryptocurrency Trading Tool (Version 2)</div>
 													<p class="resume-project-desc ms-auto mtopp">
-														Token trading-bot management tool using different centralized exchanges’ (eg:Binance) API. Users can add their API key/secret from exchanges and prepare algorithms for different types of trading. It also have trading algorithm templates sharing between users, and portfolio analysis.
+														Token trading-bot management tool using different centralized exchanges' (eg: Binance) API. Users can add their API key/secret from exchanges and prepare algorithms for different types of trading. It also has a trading algorithm template sharing system between users and investment portfolio analysis.
 													</p>
 													<p class="resume-project-desc ms-auto">
-														<span class="resume-project-tags">Technology used:</span> NodeJs as Backend, Python(Docker) as API connector, ReactJs as Frontend, MongoDB as Database, Github Actions for deployment and backup, Ubuntu/Webmin for hosting.
+														<span class="resume-project-tags">Technologies used:</span> NodeJs as Backend, Python(Docker) as API connector, ReactJs as Frontend, MongoDB as Database, GitHub Actions for deployment and backup, Ubuntu/Webmin for hosting.
 													</p>
 													<p class="resume-project-desc ms-auto">
 														<span class="resume-project-tags">My Roles & Responsibilities: (Team of 8)</span> Server/Pipeline preparation, Database design and management, Building NodeJS API Backend, Making affiliate system and Payout, Securing endpoints, Encryption Module for saving users' key/secret, Fetching users' NFT balances and applying it to user subscription, Dockerize Python ccxt API connector.
@@ -169,10 +169,10 @@
 												<li><!-- MeoxIMBA -->
 													<div class="resume-project-name ms-auto">Cryptocurrency Trading Tool (Version 1)</div>
 													<p class="resume-project-desc ms-auto mtopp">
-														Token trading-bot management tool build with Laravel, it also have Round Contest system, Trading Tournaments, Affiliate/Share distribution, Wrapped Token Exchange, Wallet Web3 Login, Users' subscription.
+														Token trading-bot management tool built with Laravel, it also has a Round Contest system, Trading Tournaments, Affiliate/Share distribution, Wrapped Token Exchange, Wallet Web3 Login, Users' subscription.
 													</p>
 													<p class="resume-project-desc ms-auto">
-														<span class="resume-project-tags">Technology used:</span>  Laravel as Backend/Frontend(blade), NodeJs as API connector, MySQL/MongoDB as Database, Github Actions for deployment, Ubuntu/Webmin for hosting, Redis for JWT sharing.
+														<span class="resume-project-tags">Technologies used:</span>  Laravel as Backend/Frontend(blade), NodeJs as API connector, MySQL/MongoDB as Database, GitHub Actions for deployment, Ubuntu/Webmin for hosting, Redis for JWT sharing.
 													</p>
 													<p class="resume-project-desc ms-auto">
 														<span class="resume-project-tags">My Roles & Responsibilities: (Team of 5)</span> Server/Pipeline preparation, Database design and management, Theme implementation to Laravel Blade, Building backend and user dashboard, Building NodeJS API connector for Binance/MEXC/Poloniex, Securing endpoints.
@@ -181,10 +181,10 @@
 												<li><!-- ISWAP -->
 													<div class="resume-project-name ms-auto">Token Swap (PancakeSwap Clone)</div>
 													<p class="resume-project-desc ms-auto mtopp">
-														Token swap platform like Uniswap or pancakeswap.
+														Token swap platforms like Uniswap or pancakeswap.
 													</p>
 													<p class="resume-project-desc ms-auto">
-														<span class="resume-project-tags">Technology used:</span>  ReactJS, TRON/BTT/BSC blockchain network, Smart contracts.
+														<span class="resume-project-tags">Technologies used:</span>  ReactJS, TRON/BTT/BSC blockchain network, Smart contracts.
 													</p>
 													<p class="resume-project-desc ms-auto">
 														<span class="resume-project-tags">My Roles & Responsibilities: (Team of 2)</span> Server/Pipeline(GH, Vercel, Heroku) preparation, Making Smart Contracts with acceptable ABIs, Fetching Markets pairs, Live token rate conversion, Making/publishing NPM packages for contract connectivity, Managing TRON fullnode, Securing endpoints.
@@ -193,10 +193,10 @@
 												<li><!-- IMBA -->
 													<div class="resume-project-name ms-auto">CryptoCurrency Exchange</div>
 													<p class="resume-project-desc ms-auto mtopp">
-														Crypto Currency exchange Application using Laravel framework, listing of different coins and creating markets and coin pairs for users to Deposit/Withdraw/Trading different coins/tokens.
+														Crypto Currency exchange Application using Laravel framework, listing of different coins/tokens and creating markets and coin pairs for users to Deposit/Withdraw/Trade different coins/tokens.
 													</p>
 													<p class="resume-project-desc ms-auto">
-														<span class="resume-project-tags">Technology used:</span>  Laravel, NodeJS/PM2, MySQL/MongoDB/Redis, EchoServer/WebSocket, TRON/BTC/ETH blockchain networks, Smart contracts.
+														<span class="resume-project-tags">Technologies used:</span>  Laravel, NodeJS/PM2, MySQL/MongoDB/Redis, EchoServer/WebSocket, TRON/BTC/ETH blockchain networks, Smart contracts.
 													</p>
 													<p class="resume-project-desc ms-auto">
 														<span class="resume-project-tags">My Roles & Responsibilities: (Team of 6)</span> Server/Pipeline/Database/Business logic
@@ -209,7 +209,7 @@
 														Web application for management of a Token, with different user roles, the concept of staking coins, deposit and withdraw, merchants' wallet coin stock and inventory management, distributing and payment system with the Token.
 													</p>
 													<p class="resume-project-desc ms-auto">
-														<span class="resume-project-tags">Technology used:</span>  Laravel
+														<span class="resume-project-tags">Technologies used:</span>  Laravel
 													</p>
 													<p class="resume-project-desc ms-auto">
 														<span class="resume-project-tags">My Roles & Responsibilities: (Single)</span> Server/DB/Business logic design and management.
@@ -218,10 +218,10 @@
 												<li><!-- UC -->
 													<div class="resume-project-name ms-auto">Job Portal</div>
 													<p class="resume-project-desc ms-auto mtopp">
-														Job portal web application with frontend users and SuperAdmin. It is using scaffolding templates to generate wildcard subdomains for each registered recruiters.
+														Job portal web application with frontend users and SuperAdmin. It is using scaffolding templates to generate wildcard subdomains for each registered recruiter.
 													</p>
 													<p class="resume-project-desc ms-auto">
-														<span class="resume-project-tags">Technology used:</span>  Laravel
+														<span class="resume-project-tags">Technologies used:</span>  Laravel
 													</p>
 													<p class="resume-project-desc ms-auto">
 														<span class="resume-project-tags">My Roles & Responsibilities: (Team of 2)</span> Server/DB/Business logic design and management.
@@ -230,10 +230,10 @@
 												<li><!-- Arena -->
 													<div class="resume-project-name ms-auto">Games Arena</div>
 													<p class="resume-project-desc ms-auto mtopp">
-														A gaming portal with different games and betting platforms where we provide the currency balance to users with tokenized api and websockets from the currency exchanger.
+														A gaming portal with different games and betting platforms where we provide the currency balance to users with tokenized API and WebSockets from the currency exchanger.
 													</p>
 													<p class="resume-project-desc ms-auto">
-														<span class="resume-project-tags">Technology used:</span>  Laravel, NodeJS,GitLab Pipilines, Docker, AWS.
+														<span class="resume-project-tags">Technologies used:</span>  Laravel, NodeJS, GitLab Pipelines, Docker, AWS.
 													</p>
 													<p class="resume-project-desc ms-auto">
 														<span class="resume-project-tags">My Roles & Responsibilities: (Team of 2)</span> Server/DB/Business logic design and management.
@@ -285,11 +285,11 @@
 											<div class="resume-position-time">Nov 2013 - May 2016</div>
 										</div><!--//resume-timeline-item-header-->
 										<div class="resume-timeline-item-desc">
-											<p>Worked as a PHP Developer, made 6 Codeignitor, 1 Magento/Prestashop/Opencart, 50+ Wordpress, Managed 2 big magazine websites with over 10k users per day.</p>
+											<p>Worked as a PHP Developer, made 6 Codeignitor, 1 Magento/Prestashop/Opencart, 50+ WordPress, and Managed 2 big magazine websites with over 10k users per day.</p>
 											<h4 class="resume-timeline-item-desc-heading font-weight-bold">Technologies used during this period:</h4>
 											<ul class="list-inline">
 												<li class="list-inline-item"><span class="badge bg-secondary badge-pill">CodeIgniter</span></li>
-												<li class="list-inline-item"><span class="badge bg-secondary badge-pill">Wordpress</span></li>
+												<li class="list-inline-item"><span class="badge bg-secondary badge-pill">WordPress</span></li>
 												<li class="list-inline-item"><span class="badge bg-secondary badge-pill">WSDL</span></li>
 												<li class="list-inline-item"><span class="badge bg-secondary badge-pill">Analytics</span></li>
 											</ul>
