--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
 														Getting Trade-In devices from different sites, with shared signed token, or through ZYTE API and puppeteer.
 													</p>
 													<p class="resume-project-desc ms-auto">
-														<span class="resume-project-tags">Technologies used:</span> NodeJs as API connector, HeadLess Laravel(Docker) as Backend, ReactJs as Frontend, MySQL as Database, Bitbucket Pipelines for deployment, Ubuntu for hosting.
+														<span class="resume-project-tags">Technologies used:</span> NodeJs as API connector, HeadLess Laravel(Docker) as Backend, ReactJs as Frontend, MySQL as Database, Traefik(Docker), Bitbucket Pipelines for deployment, Ubuntu for hosting.
 													</p>
 													<p class="resume-project-desc ms-auto">
 														<span class="resume-project-tags">My Roles & Responsibilities: (Team of 5)</span> Making Laravel internal APIs to save the device data, making API connectors for different sites.
